--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<h1>GEFF</h1>
+<h2 class="textColor">Green Energy For Future</h2>
+
+<app-hero></app-hero>
+<mat-card>
+  <mat-card-content>Simple card</mat-card-content>
+</mat-card>
