Componente hero e immagini

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,1 +1,16 @@
-<p>hero works!</p>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
+<div class="hero">
+    <div class="hero-content">
+        <img src="../../../assets/images/35783239_8311663.png" alt="">
+    <div class="hero-text">
+        <img src="../../../assets/images/icon2.png" alt="">
+        <h2>Green energy for future</h2>
+        <p>Tutti possono far parte di una comunità energetica che condivide energia pulita, 
+        abbattendo così gli sprechi energetici, le bollette e la propria impronta di carbonio.</p>
+    <div class="hero-button">
+        <button mat-stroked-button color="Primary">Partecipa anche tu!</button>
+</div>
+
+
