Aggiunta logo nella navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <ul>
-  <li><a href="#home"><b>GEFF</b></a></li>
-  <li><a href="#news">CHI SIAMO</a></li>
+  <li><a href="#home"><img src="../../../assets/images/icon2.png" alt="" width="60" height="30"></a></li>
+  <li><a href="#news"> CHI SIAMO </a></li>
   <li><a href="#news">OFFERTE</a></li>
   <li><a href="#news">SUPPORTO</a></li>
   <li style="float:right"> <a href="#menu"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
