--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -4,6 +4,14 @@
             <img src="../../../assets/images/icon2.png" alt="">
         </div>
         <mat-form-field appearance="fill">
+            <mat-label>Nome</mat-label>
+            <input matInput>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+            <mat-label>Cognome</mat-label>
+            <input matInput>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
             <mat-label>Email</mat-label>
             <input matInput>
         </mat-form-field>
@@ -11,9 +19,12 @@
           <mat-label>Password</mat-label>
           <input matInput>
         </mat-form-field>
+        <mat-form-field appearance="fill">
+            <mat-label>Conferma Password</mat-label>
+            <input matInput>
+        </mat-form-field>
     </mat-card-content>   
 <div class="button-row">
-    <button mat-stroked-button color="primary">Login</button>
-    <button mat-stroked-button color="primary" routerLink="/registration">Non hai l'account? Registrati</button>
+    <button mat-stroked-button color="primary">Registrati</button>
     </div>
 </mat-card>
