--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,64 @@
+
 <app-hero></app-hero>
+<div class="container text-center">
+  <div class="row">
+    <div class="col">
+      <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>G.E.F.F</mat-card-title>
+          <mat-card-subtitle> Fonti rinnovabbili</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image  class="image" src="..\assets\images\card_im_1.jpeg" alt="start up photo">
+        <mat-card-content>
+          <p>
+            Sei un nuovo cliente!?vuoi sapere da dove provengono le nostre energie rinnovabili?
+            clicca qui sotto per saperne di più.
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button>scopri di più</button>
+        </mat-card-actions>
+      </mat-card>
+      
+    </div>
+    <div class="col">
+      <mat-card>
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Effetto famiglia</mat-card-title>
+        <mat-card-subtitle>Be prosumer</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image  class="image" src="..\assets\images\card_im_3_0.png" alt="start up photo">
+      <mat-card-content>
+        <p>
+          condivi la tua energia vitale con chi ne ha bisogno,
+          un' energia più pulita per tutti 
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>fallo adesso</button>
+      </mat-card-actions>
+    </mat-card>
+    </div>
+    <div class="col">
+      <mat-card>
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>La scelta giusta</mat-card-title>
+          <mat-card-subtitle>Respira meglio</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image class="image" src="..\assets\images\prosumer_im_2.png" alt="start up photo">
+        <mat-card-content>
+          <p>
+            Sai quanto Co2 emani con la tua  green family?
+            Esatto ZERO!fai pure tu la scelta giusta.
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button>Fallo con noi</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+  </div>
+</div>
