--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -4,17 +4,19 @@
         <div style="text-align: center;">
             <img src="../../../assets/images/icon2.png" alt="">
         </div>
-        <mat-form-field appearance="fill">
+        <form [formGroup]="formAccesso">
+          <mat-form-field appearance="fill">
             <mat-label>Email</mat-label>
-            <input matInput>
+            <input matInput formControlName="mail">
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Password</mat-label>
-          <input matInput>
+          <input matInput formControlName="password">
         </mat-form-field>
-    </mat-card-content>   
+        </form>
+    </mat-card-content>
 <div class="button-row">
-    <button mat-stroked-button color="primary">Login</button>
+    <button mat-stroked-button color="primary" (click)="login()">Login</button>
     <button mat-stroked-button color="primary" routerLink="/registration">Non hai l'account? Registrati</button>
     </div>
 </mat-card>
