--- a/src/app/components/terza-sezione-home/terza-sezione-home.component.css
+++ b/src/app/components/terza-sezione-home/terza-sezione-home.component.css
@@ -1,6 +1,8 @@
 
 .terza-sezione-home {
-    margin-top: 18px;
+    margin-top: 30px;
+    margin-right: 10px;
+    margin-left: 10px;
     font-family: 'Poppins', sans-serif;
     text-align: center;
     font-size: 18px;
