terza sezione modificata

--- a/src/app/components/terza-sezione-home/terza-sezione-home.component.html
+++ b/src/app/components/terza-sezione-home/terza-sezione-home.component.html
@@ -1,6 +1,6 @@
 <br> <br> <br> <br> <div class="terza-sezione-home">
 <div class="terza-sezione-content">
-<img src="../../../assets/images/prima.jpg" width="700" height="580" align="left" hspace="10"> 
+<img src="../../../assets/images/sostenib.jpg" width="700" height="580" align="left" hspace="10"> 
 <div class="terza-text"></div>
 <h2 class="terza-sezione-home"> <b>Cos'è una comunità energetica</b></h2>
 <p class="terza-sezione-home">
