--- a/src/app/components/panoramica-focus/panoramica-focus.component.html
+++ b/src/app/components/panoramica-focus/panoramica-focus.component.html
@@ -17,8 +17,14 @@
         <div class="column">
             <div class="card">
                 <h1 class="card-title">Stato di carica</h1>
-                <div class="battery">
-                    <div class="battery-charge"></div>
+                <div class="battery-low">
+                    <div [style.height.%]="percentuale" class="battery-charge"></div>
+                </div>
+                <div class="battery-medium">
+                    <div [style.height.%]="percentuale" class="battery-charge"></div>
+                </div>
+                <div class="battery-high">
+                    <div [style.height.%]="percentuale" class="battery-charge"></div>
                 </div>
                 <div class="per">
                     <p>{{percentuale}}%</p>
