--- a/src/app/components/menu-area-utente/menu-area-utente.component.html
+++ b/src/app/components/menu-area-utente/menu-area-utente.component.html
@@ -1,10 +1,15 @@
 <div class="sidenav">
-  <p style="text-align: center"> <svg xmlns="http://www.w3.org/2000/svg" height="90" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/> </svg> </p>
-  <p style="font-size: 24px"> Bentornato! </p>
+  <p style="text-align: center;"><img src="../../../assets/images/donna.jpg" height="90px"></p>
+  <p style="font-size: 26px;"> Bentornato! </p>
+  <p> Asia Rossi </p> <br>
   <a href="#panoramica">Panoramica</a> <br>
-  <a href="#service di login">----</a> <br>
   <a href="#bolletta">Bolletta</a> <br>
-  <a href="#decreto">Contratti</a>
+  <a href="#decreto">Contratto</a>
+  <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+  <a href="#Modifica account">Modifica profilo</a> <br>
+  <a href="/home"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+    <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+    <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+  </svg></a>
+  <p style="font-size: 15px;"> Logout </p>
 </div>
