--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <app-navbar class="w-100"></app-navbar>
-<app-hero></app-hero>
+<app-hero></app-hero> <br> <br> <br>
 <div class="container text-center">
   <div class="row">
     <div class="col">
@@ -62,6 +62,6 @@
     </div>
   </div>
 </div>
-<br>
+<br> <br> <br>
 <hr style="width: 87%; margin:auto">
 <app-terza-sezione-home></app-terza-sezione-home>
