--- a/src/app/components/panoramica-focus/panoramica-focus.component.html
+++ b/src/app/components/panoramica-focus/panoramica-focus.component.html
@@ -11,20 +11,17 @@
         <div class="column">
             <div class="card">
                 <h1 class="card-title">Spesa Real-time</h1>
-                <p class="card-text">{{costo}}€ kW</p>
+                <div class="centered">
+                    <div class="card-text-costo"><b>{{costo}}</b>€</div>
+                    <div class="card-text-kw">115 kW</div>
+                </div>
             </div>
         </div>
         <div class="column">
             <div class="card">
                 <h1 class="card-title">Stato di carica</h1>
-                <div class="battery-low">
-                    <div [style.height.%]="percentuale" class="battery-charge"></div>
-                </div>
-                <div class="battery-medium">
-                    <div [style.height.%]="percentuale" class="battery-charge"></div>
-                </div>
-                <div class="battery-high">
-                    <div [style.height.%]="percentuale" class="battery-charge"></div>
+                <div class="battery">
+                    <div [style.height.%]="percentuale" [style.backgroundColor]="colore" class="battery-charge"></div>
                 </div>
                 <div class="per">
                     <p>{{percentuale}}%</p>
@@ -32,4 +29,4 @@
             </div>
         </div>
     </div>
-</div> 
+</div>
