wip panoramica personale

--- a/src/app/pages/area-utente/area-utente.component.html
+++ b/src/app/pages/area-utente/area-utente.component.html
@@ -1,5 +1,7 @@
 <app-menu-area-utente> </app-menu-area-utente>
 <div class="container">
     <app-panoramica-focus></app-panoramica-focus>
+    <div style="margin: 40px;">
+    <hr></div>
     <app-panoramica-personale></app-panoramica-personale>
 </div>
