--- a/src/app/components/panoramica-personale/panoramica-personale.component.html
+++ b/src/app/components/panoramica-personale/panoramica-personale.component.html
@@ -1,1 +1,33 @@
-<p>panoramica-personale works!</p>
+<div class="row">
+    <div class="col-8">
+        <mat-card>
+
+            <h1 style="color: rgb(80, 191, 187);
+        font-family: Poppins,sans-serif;
+        text-align: center; 
+        background-color: rgb(255, 255, 255); border-radius:7px;">
+                <strong>MONITORAGGIO SETTIMANALE</strong>
+            </h1>
+            <div class="row">
+
+                <div class="card col-11;element.text-align:center">
+                    <p-chart style="border: 0px !important;" height="220px" type="line" [data]="data" [options]="options"></p-chart>
+                </div>
+            </div>
+        </mat-card>
+
+    </div>
+
+    <div class=" col-4">
+        <mat-card>
+            <h1 style="color: rgb(80, 191, 187);
+            font-family: Poppins,sans-serif;
+            text-align: center; 
+            background-color: rgb(255, 255, 255); border-radius:7px;">
+                <strong>METEO</strong>
+            </h1>
+            <img [src]="urlIconaMeteo" alt="">
+
+        </mat-card>
+    </div>
+</div>
