--- a/src/app/components/panoramica-focus/panoramica-focus.component.html
+++ b/src/app/components/panoramica-focus/panoramica-focus.component.html
@@ -1,5 +1,5 @@
 <div class="focus">
-    <h1>Panoramica</h1>
+    <h1 class="title">Panoramica</h1>
     <div class="row">
         <div class="column col-4">
             <div class="card">
