--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -11,9 +11,9 @@
 .mat-card {
     margin-top: 35px;
     width: 500px;
-    height: 550px;
-    background-color:rgb(240, 240, 240);
+    height: 625px;
     margin-bottom: 35px;
+    padding: 50px;
 }
 .mat-card-content{
     font-size: 22px;
@@ -25,8 +25,7 @@
     margin-bottom: 45px;
     font-size: 24px;
     width: 100%;
-    background-color:rgb(223, 223, 223);
-    border-color:rgb(255, 199, 1, 0.4);
-    color: #7b7f81;
-    box-shadow: rgba(255, 199, 1, 0.4) -5px 5px, rgba(255, 199, 1, 0.3) -10px 10px, rgba(255, 199, 1, 0.2) -15px 15px, rgba(255, 199, 1, 0.1) -20px 20px, rgba(255, 199, 1, 0.05) -25px 25px;
+    height: 40px;
+    background-color:#50BFBB;
+    color: #f9f9f9;
 }
