sidenav profile pic fix

--- a/src/app/components/menu-area-utente/menu-area-utente.component.html
+++ b/src/app/components/menu-area-utente/menu-area-utente.component.html
@@ -6,7 +6,7 @@
   </svg> </a>
   <!-- <p> <img src="../../../assets/images/omino.jpeg" height="100px"> </p> -->
  
-    <p> <img [src]='foto' height="100px"> </p>
+    <p> <img class="profilepic" [src]='foto'> </p>
 
   <span> {{nome}} {{cognome}} </span>
    <p style="font-size: 26px;"> Ciao!  </p>
