--- a/src/app/components/menu-area-utente/menu-area-utente.component.css
+++ b/src/app/components/menu-area-utente/menu-area-utente.component.css
@@ -6,7 +6,7 @@ body {
     height: 100%;
     width: 190px;
     position: fixed;
-    z-index: 1;
+    z-index: -1;
     top: 0;
     left: 0;
     background-color: #50bfbb;
@@ -29,8 +29,11 @@ body {
     display: block;
     text-align: center;
   }
-  .sidenav img {
-    border-radius: 50%;
+  .profilepic {
+    object-fit: cover;
+    width: 100px;
+    height: 100px;
+    border-radius: 15px;
   }
   .terzaparte{
    margin-top:200px; 
