--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -8,22 +8,27 @@
 .mat-card mat-form-field {
     width: 100%;
 }
+.mat-card mat-icon{
+    font-size: 140%;
+    line-height: 0.8;
+}
 .mat-card {
     margin-top: 35px;
     width: 500px;
-    height: 625px;
+    height: 624px;
     margin-bottom: 35px;
     padding: 50px;
 }
 .mat-card-content{
     font-size: 22px;
+
 }
 .mat-card-content img{
     width: 60%;
 }
 .button-row button{
     margin-bottom: 45px;
-    font-size: 24px;
+    font-size: 26px;
     width: 100%;
     height: 40px;
     background-color:#50BFBB;
