--- a/src/app/pages/registration/registration.component.css
+++ b/src/app/pages/registration/registration.component.css
@@ -12,7 +12,6 @@
     margin-top: 35px;
     width: 500px;
     height: 820px;
-    background-color:rgb(240, 240, 240);
     margin-bottom: 35px;
 }
 .mat-card-content{
@@ -25,8 +24,6 @@
     margin-bottom: 45px;
     font-size: 24px;
     width: 100%;
-    background-color:rgb(223, 223, 223);
-    border-color:rgb(255, 199, 1, 0.4);
-    color: #7b7f81;
-    box-shadow: rgba(255, 199, 1, 0.4) -5px 5px, rgba(255, 199, 1, 0.3) -10px 10px, rgba(255, 199, 1, 0.2) -15px 15px, rgba(255, 199, 1, 0.1) -20px 20px, rgba(255, 199, 1, 0.05) -25px 25px;
+    background-color:#50BFBB;
+    color:white;
 }
