--- a/src/app/components/panoramica-personale/panoramica-personale.component.html
+++ b/src/app/components/panoramica-personale/panoramica-personale.component.html
@@ -11,7 +11,8 @@
             <div class="row">
 
                 <div class="card col-11;element.text-align:center">
-                    <p-chart style="border: 0px !important;" height="220px" type="line" [data]="data" [options]="options"></p-chart>
+                    <p-chart style="border: 0px !important;" height="220px" type="line" [data]="data"
+                        [options]="options"></p-chart>
                 </div>
             </div>
         </mat-card>
@@ -26,9 +27,11 @@
             background-color: rgb(255, 255, 255); border-radius:7px;">
                 <strong>METEO</strong>
             </h1>
-            <img [src]="urlIconaMeteo" alt="">
-            <h3>{{</h3>
+            <div style="text-align: center;">
+                <img [src]="urlIconaMeteo" alt="">
+                <h2>{{efficienzaSolare}}</h2>
+            </div>
         </mat-card>
-        
+
     </div>
 </div>
