--- a/src/app/pages/area-utente/area-utente.component.html
+++ b/src/app/pages/area-utente/area-utente.component.html
@@ -4,4 +4,5 @@
     <div style="margin: 40px;">
     <hr></div>
     <app-panoramica-personale></app-panoramica-personale>
+    <app-panorimica-comunita></app-panorimica-comunita>
 </div>
