--- a/src/app/pages/area-utente/area-utente.component.html
+++ b/src/app/pages/area-utente/area-utente.component.html
@@ -2,7 +2,11 @@
 <div class="container">
     <app-panoramica-focus></app-panoramica-focus>
     <div style="margin: 40px;">
-    <hr></div>
+        <hr>
+    </div>
     <app-panoramica-personale></app-panoramica-personale>
+    <div style="margin: 40px;">
+        <hr>
+    </div>
     <app-panorimica-comunita></app-panorimica-comunita>
 </div>
