--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -7,10 +7,10 @@
     <div class="hero-text">
         <img src="../../../assets/images/icon2.png" alt="">
         <h2>Green energy for future</h2>
-        <p>Tutti possono far parte di una comunità energetica che condivide energia pulita, 
-        abbattendo così gli sprechi energetici, le bollette e la propria impronta di carbonio.</p>
+        <p>Le comunità energetiche possono diventare una vera e propria realtà, anche in Italia. Una realtà sempre più 
+        necessaria per accedere al consumo di energia proveniente da fonti rinnovabili.</p>
     <div class="hero-button">
-        <button mat-stroked-button color="Primary">Partecipa anche tu!</button>
+        <button mat-stroked-button color="Primary">Scopri di più!</button>
 </div>
 
 
