--- a/src/app/components/menu-area-utente/menu-area-utente.component.css
+++ b/src/app/components/menu-area-utente/menu-area-utente.component.css
@@ -1,10 +1,10 @@
 body {
-    font-family: "Lato", sans-serif;
+    font-family: 'Poppins', sans-serif;
   }
   
   .sidenav {
     height: 100%;
-    width: 190px;
+    width: 300px;
     position: fixed;
     z-index: 0;
     top: 0;
@@ -49,4 +49,7 @@ body {
     color: #EEF3F2;
     display: block;
     text-align: center;
+  }
+  .iframe{
+    background-color: white;
   }
