--- a/src/app/components/menu-area-utente/menu-area-utente.component.html
+++ b/src/app/components/menu-area-utente/menu-area-utente.component.html
@@ -14,7 +14,14 @@
   <div class="secondaparte">
   <a href="#panoramica">Panoramica</a> <br>
   <a href="#bolletta">Bolletta</a> <br>
-  <a href="#decreto">Contratto</a>
+  <a href="#decreto">Contratto
+  <iframe id="Contratto"
+    title="Contratto"
+    width="300"
+    height="300"
+    src="https://def.finanze.it/DocTribFrontend/getArticoloDetailFromResultList.do?id=%7BA2557794-4998-45AB-BF7F-AE6003C9DDE1%7D&codiceOrdinamento=200004200000200&idAttoNormativo=%7B74782FF5-8835-4235-BFE0-F8D4DA1A7AB4%7D">
+</iframe>
+</a>
   </div>
   <div class="terzaparte">
  <button style="background: none !important; border: none;" (click)="logout()">
