--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -6,23 +6,25 @@
         </div>
         <mat-form-field appearance="fill">
             <mat-label>Nome</mat-label>
-            <input matInput>
+            <input matInput required>
         </mat-form-field>
         <mat-form-field appearance="fill">
             <mat-label>Cognome</mat-label>
-            <input matInput>
+            <input matInput required>
         </mat-form-field>
         <mat-form-field appearance="fill">
             <mat-label>Email</mat-label>
-            <input matInput>
+            <input matInput required>
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Password</mat-label>
-          <input matInput>
+          <input matInput placeholder="Password" [type]=" hide ?'password' : 'text' " required>
+          <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </mat-form-field>
         <mat-form-field appearance="fill">
             <mat-label>Conferma Password</mat-label>
-            <input matInput>
+            <input matInput placeholder="Password" [type]=" hide ?'password' : 'text' " required>
+            <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </mat-form-field>
     </mat-card-content>   
 <div class="button-row">
