--- a/src/app/components/menu-area-utente/menu-area-utente.component.css
+++ b/src/app/components/menu-area-utente/menu-area-utente.component.css
@@ -1,11 +1,10 @@
 body {
     font-family: 'Poppins', sans-serif;
   }
-  
+
   .sidenav {
     height: 100%;
-    width: 300px;
-    position: fixed;
+    width: 190px;
     z-index: 0;
     top: 0;
     left: 0;
@@ -13,7 +12,7 @@ body {
     overflow-x: hidden;
     padding-top: 18px;
   }
-  
+
   .sidenav a {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
@@ -36,8 +35,16 @@ body {
     border-radius: 15px;
   }
   .terzaparte{
-   margin-top:200px; 
+   margin-top:200px;
+   text-align: center;
   }
+
+  .terzaparte button {
+    border-radius: 50%;
+    padding: 10px;
+    background-color: #46a5a1;
+  }
+
   .secondaparte{
     margin-top: 100px;
     margin-bottom: 100px;
