--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,55 +4,54 @@
   <div class="row">
     <div class="col">
       <mat-card class="example-card">
-        <mat-card-header>
+        <mat-card-header style="justify-content: center;">
           <div mat-card-avatar class="example-header-image"></div>
           <mat-card-title>G.E.F.F</mat-card-title>
-          <mat-card-subtitle> Fonti rinnovabbili</mat-card-subtitle>
+          <mat-card-subtitle>Fonti rinnovabili</mat-card-subtitle>
         </mat-card-header>
-        <img mat-card-image  class="image" src="..\assets\images\card_im_1.jpeg" alt="start up photo">
+        <img mat-card-image  class="image" src="../../../assets/images/card_1.png" alt="start up photo">
         <mat-card-content>
           <p>
-            Sei un nuovo cliente!?vuoi sapere da dove provengono le nostre energie rinnovabili?
-            clicca qui sotto per saperne di più.
+            Sei un nuovo cliente? Vuoi sapere da dove provengono le nostre energie rinnovabili?
+            Clicca qui sotto per saperne di più.
           </p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button>scopri di più</button>
+          <button mat-button>Scopri di più</button>
         </mat-card-actions>
       </mat-card>
       
     </div>
     <div class="col">
       <mat-card>
-      <mat-card-header>
+      <mat-card-header style="justify-content: center;">
         <div mat-card-avatar class="example-header-image"></div>
         <mat-card-title>Effetto famiglia</mat-card-title>
         <mat-card-subtitle>Be prosumer</mat-card-subtitle>
       </mat-card-header>
-      <img mat-card-image  class="image" src="..\assets\images\card_im_3_0.png" alt="start up photo">
+      <img mat-card-image  class="image" src="../../../assets/images/card_2.png" alt="start up photo">
       <mat-card-content>
         <p>
-          condivi la tua energia vitale con chi ne ha bisogno,
-          un' energia più pulita per tutti 
+          Condividi la tua energia vitale con chi ne ha bisogno, un'energia più pulita per tutti.
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button>fallo adesso</button>
+        <button mat-button>Fallo adesso</button>
       </mat-card-actions>
     </mat-card>
     </div>
     <div class="col">
       <mat-card>
-        <mat-card-header>
+        <mat-card-header style="justify-content: center;"> 
           <div mat-card-avatar class="example-header-image"></div>
           <mat-card-title>La scelta giusta</mat-card-title>
           <mat-card-subtitle>Respira meglio</mat-card-subtitle>
         </mat-card-header>
-        <img mat-card-image class="image" src="..\assets\images\prosumer_im_2.png" alt="start up photo">
+        <img mat-card-image class="image" src="../../../assets/images/card_3.jpg" alt="start up photo">
         <mat-card-content>
           <p>
-            Sai quanto Co2 emani con la tua  green family?
-            Esatto ZERO!fai pure tu la scelta giusta.
+            Sai quanta Co2 emani con la tua green family?
+            Esatto, ZERO! Compi anche tu la scelta giusta.
           </p>
         </mat-card-content>
         <mat-card-actions>
