--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -10,7 +10,7 @@
         <p>Tutti possono far parte di una comunità energetica che condivide energia pulita, 
         abbattendo così gli sprechi energetici, le bollette e la propria impronta di carbonio.</p>
     <div class="hero-button">
-        <button mat-stroked-button color="Primary">Partecipa anche tu!</button>
+        <button mat-stroked-button color="Primary">Scopri di più!</button>
 </div>
 
 
