--- a/src/app/components/contratto/contratto.component.html
+++ b/src/app/components/contratto/contratto.component.html
@@ -1,6 +1,6 @@
 <iframe id="Contratto"
 title="Contratto"
-width="158"
-height="400"
+width="100%"
+height="500"
 src="https://def.finanze.it/DocTribFrontend/getArticoloDetailFromResultList.do?id=%7BA2557794-4998-45AB-BF7F-AE6003C9DDE1%7D&codiceOrdinamento=200004200000200&idAttoNormativo=%7B74782FF5-8835-4235-BFE0-F8D4DA1A7AB4%7D">
 </iframe>
