--- a/src/app/pages/area-utente/area-utente.component.html
+++ b/src/app/pages/area-utente/area-utente.component.html
@@ -9,4 +9,10 @@
         <hr>
     </div>
     <app-panorimica-comunita></app-panorimica-comunita>
+    <div style="margin: 40px;">
+        <hr>
+    </div>
+    <app-contratto></app-contratto>
+
+
 </div>
