--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,19 +1,21 @@
 <app-navbar class="w-100"></app-navbar>
+<br> <br> <br>
 <app-hero></app-hero> <br> <br> <br>
+<hr style="width: 87%; margin:auto">
+<br><br><br>
 <div class="container text-center">
   <div class="row">
     <div class="col">
       <mat-card class="example-card">
         <mat-card-header style="justify-content: center;">
           <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>G.E.F.F</mat-card-title>
+          <mat-card-title><b>G.E.F.F</b></mat-card-title>
           <mat-card-subtitle>Fonti rinnovabili</mat-card-subtitle>
         </mat-card-header>
         <img mat-card-image  class="image" src="../../../assets/images/card_1.png" alt="start up photo">
         <mat-card-content>
-          <p>
-            Sei un nuovo cliente? Vuoi sapere da dove provengono le nostre energie rinnovabili?
-            Clicca qui sotto per saperne di più.
+      <p>
+          Ciao! Sei curioso di sapere da dove provengono le nostre energie rinnovabili?
           </p>
         </mat-card-content>
         <mat-card-actions>
@@ -26,17 +28,17 @@
       <mat-card>
       <mat-card-header style="justify-content: center;">
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Effetto famiglia</mat-card-title>
+        <mat-card-title><b>Effetto famiglia</b></mat-card-title>
         <mat-card-subtitle>Be prosumer</mat-card-subtitle>
       </mat-card-header>
       <img mat-card-image  class="image" src="../../../assets/images/card_2.png" alt="start up photo">
       <mat-card-content>
         <p>
-          Condividi la tua energia vitale con chi ne ha bisogno, un'energia più pulita per tutti.
+          Condividi la tua energia vitale, con chi ne ha bisogno! Insieme siamo più forti!
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button>Fallo adesso</button>
+        <button mat-button>Scopri come fare</button>
       </mat-card-actions>
     </mat-card>
     </div>
@@ -44,18 +46,18 @@
       <mat-card>
         <mat-card-header style="justify-content: center;"> 
           <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>La scelta giusta</mat-card-title>
+          <mat-card-title><b>La scelta giusta</b></mat-card-title>
           <mat-card-subtitle>Respira meglio</mat-card-subtitle>
         </mat-card-header>
         <img mat-card-image class="image" src="../../../assets/images/card_3.jpg" alt="start up photo">
         <mat-card-content>
           <p>
             Sai quanta Co2 emani con la tua green family?
-            Esatto, ZERO! Compi anche tu la scelta giusta.
+            ZERO! Fai anche tu la scelta giusta.
           </p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button>Fallo con noi</button>
+          <button mat-button>Scopri come fare</button>
         </mat-card-actions>
       </mat-card>
     </div>
