--- a/src/app/components/panoramica-personale/panoramica-personale.component.css
+++ b/src/app/components/panoramica-personale/panoramica-personale.component.css
@@ -10,11 +10,13 @@
     height: 500px;
     width: 500px;
 }
-h1 {
-    font-family: Poppins,sans-serif;
+.card-title {color:#2A2A2A;
+    font-size: 35px;
+    font-family:'Poppins',sans-serif;
     text-align: center;
 }
-img {
+.img {
     width: 48%;
     margin-bottom: 10px;
+    
 }
