--- a/src/app/components/panoramica-personale/panoramica-personale.component.html
+++ b/src/app/components/panoramica-personale/panoramica-personale.component.html
@@ -2,8 +2,8 @@
     <div class="col-8">
         <mat-card>
 
-            <h1>
-                <strong>MONITORAGGIO SETTIMANALE</strong>
+            <h1 class="card-title">
+            Monitoraggio settimanale
             </h1>
             <div class="row">
 
@@ -18,8 +18,8 @@
 
     <div class=" col-4">
         <mat-card>
-            <h1>
-                <strong>METEO</strong>
+            <h1 class="card-title">
+            Meteo
             </h1>
             <div style="text-align: center;">
                 <img [src]="urlIconaMeteo" alt="">
