--- a/src/app/components/terza-sezione-home/terza-sezione-home.component.css
+++ b/src/app/components/terza-sezione-home/terza-sezione-home.component.css
@@ -5,7 +5,7 @@
     margin-left: 10px;
     font-family: 'Poppins', sans-serif;
     text-align: center;
-    font-size: 18px;
-    line-height: 1.2;
-    color: #7b7f81;
+    font-size: 19px;
+    line-height: 1.1;
+    color: #2a2a2a;
 }
