--- a/src/app/components/terza-sezione-home/terza-sezione-home.component.html
+++ b/src/app/components/terza-sezione-home/terza-sezione-home.component.html
@@ -1,8 +1,8 @@
-<br> <br> <br> <br> <div class="terza-sezione-home">
+<br> <br> <br>  <div class="terza-sezione-home">
 <div class="terza-sezione-content">
-<img src="../../../assets/images/green.jpg" width="700" height="580" align="left" hspace="10"> 
+<img src="../../../assets/images/green.jpg" width="790" height="590" align="left" hspace="10"> 
 <div class="terza-text"></div>
-<h2 class="terza-sezione-home"> <b>Cos'è una comunità energetica</b></h2>
+<h1 class="terza-sezione-home"> <b style="color:  #50BFBB;">Cos'è una comunità energetica</b></h1>
 <p class="terza-sezione-home">
     Una <b>Comunità Energetica</b> è un'associazione che produce e condivide energia rinnovabile e pulita, per generare
  energia a costi vantaggiosi. <br> <b>Benefici ambientali</b>:
@@ -11,13 +11,13 @@
  ma riceve dalla Comunità un importo per la condivisione dei benefici garantiti. Questo compenso equivale a una riduzione della bolletta.<br>
  <b>Benefici sociali</b>: consentono la produzione autonoma e locale di energia 
  elettrica.</p>
- <h2 class="terza-sezione-home"> <b>Come creare una Comunità Energetica</b> </h2>
+ <h1 class="terza-sezione-home"> <b style="color:  #50BFBB;">Come creare una Comunità Energetica</b> </h1>
  <p class="terza-sezione-home">I membri della Comunità possono essere <b>persone fisiche</b>  o <b>giuridiche</b>.
     Individua l'area dove vuoi installare l'<b>impianto di produzione</b>, che deve
     essere in prossimità dei consumatori. L'impianto non deve necessariamente essere di proprietà
     della Comunità, ma può anche essere messo a disposizione da un <b>soggetto terzo</b>.
 </p>
-    <h2 class="terza-sezione-home"> <b>Come ottenere gli incentivi</b></h2>
+    <h1 class="terza-sezione-home"> <b style="color:  #50BFBB;">Come ottenere gli incentivi</b></h1>
     <p class="terza-sezione-home"> Quando l'impianto è in esercizio, la Comunità può fare richiesta al Gestore dei Servizi
         Energetici per ottenere gli <b>incentivi</b>. 
         <a href="https://temi.camera.it/leg18/post/i-principali-contenuti-della-direttiva-red-ii.html">Link alla normativa europea</a>
