--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -5,12 +5,25 @@
   box-sizing: border-box;
   padding-right: 20px;
 }
-.card title{
-    font-family:'Poppins', sans-serif
-    color rgb(5, 251, 210)
-    align justify
-
+.mat-card-title{
+    font-family:'Poppins', sans-serif;
+    color: #50BFBB;
+    text-align :center;
+    font-size: 28px;
  }
+
+ .mat-card-subtitle{
+  font-family:'Poppins', sans-serif;
+    color: #2a2a2a;
+    text-align :center;
+    font-size: 18px;
+ }
+.p{
+  font-family:'Poppins', sans-serif;
+  color: #2a2a2a;
+  text-align :center;
+  font-size: 15px;
+}
 
 .column{
   background-image: src="../../../assets/images/35783239_8311663.png";
