minor fix icona meteo

--- a/src/app/components/panoramica-personale/panoramica-personale.component.css
+++ b/src/app/components/panoramica-personale/panoramica-personale.component.css
@@ -15,8 +15,7 @@
     font-family:'Poppins',sans-serif;
     text-align: center;
 }
-.img {
+img {
     width: 48%;
     margin-bottom: 10px;
-    
 }
