component bolletta wip

--- a/src/app/pages/area-utente/area-utente.component.html
+++ b/src/app/pages/area-utente/area-utente.component.html
@@ -12,6 +12,10 @@
     <div style="margin: 40px;">
         <hr>
     </div>
+    <app-bolletta></app-bolletta>
+    <div style="margin: 40px;">
+        <hr>
+    </div>
     <app-contratto></app-contratto>
 
 
