fix scroll to fragment

--- a/src/app/components/menu-area-utente/menu-area-utente.component.html
+++ b/src/app/components/menu-area-utente/menu-area-utente.component.html
@@ -16,10 +16,9 @@
       <p style="font-size: 26px;"> Ciao! </p>
     </div>
     <div class="secondaparte">
-      <a href="#panoramica">Panoramica</a> <br>
-      <a href="#bolletta">Bolletta</a> <br>
-      <a href="#decreto">Contratto
-      </a>
+      <a routerLink="." fragment="panoramica">Panoramica</a> <br>
+      <a routerLink="." fragment="bolletta">Bolletta</a> <br>
+      <a routerLink="." fragment="contratto">Contratto</a> <br>
     </div>
     <div class="terzaparte">
       <button style=" border: none;" (click)="logout()">
