--- a/src/app/components/panoramica-focus/panoramica-focus.component.html
+++ b/src/app/components/panoramica-focus/panoramica-focus.component.html
@@ -1,4 +1,5 @@
-<div class="focus">
+<div class="anchor" id="panoramica"> <p> </p></div>
+<div class="focus" >
     <h1 class="title">Panoramica</h1>
     <div class="row">
         <div class="column col-4">
