developed on angular

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -46,9 +46,11 @@
                 PCTO IIS Leonardo Da Vinci
                 <br>
                Claudia Pontiggia, Rossella Bochicchio, Eleonora Rossetti, Filippo Rogai, Pierre Rebong, Vince Macasaet, Jinxe Xu
+               <br>
+               Developed whit<mat-icon style="font-size: 12pt; padding-top: 10px;">favorite</mat-icon>on Angular
             </div>
-            
+
         </div>
-       
+
     </div>
 </footer>
