--- a/src/app/components/bolletta/bolletta.component.html
+++ b/src/app/components/bolletta/bolletta.component.html
@@ -1,56 +1,72 @@
-<div class="anchor" id="bolletta"> <p> </p></div>
+<!-- <div class="anchor" id="bolletta">
+  <p> </p>
+</div> -->
+<div id="bolletta" style="height: 100px;"></div>
 <div class="container">
-    <div class="title">
-        <h2>Bolletta</h2>
-    </div>
-    <div class="bolletta">
-        <table>
-            <tr>
-                <th>Mese</th>
-                <th>Costo</th>
-                <th>Consumo</th>
-                <th>Risparmio</th>
-            </tr>
-            <tr>
-                <td>Dicembre</td>
-                <td>500</td>
-                <td>500kW</td>
-                <td>124</td>
-            </tr>
-            <tr>
-                <td>Gennaio</td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>Febbraio</td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>Marzo</td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>Aprile</td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>Maggio</td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </table>
-    </div>
-    <div class="button">
-        <button mat-stroked-button color="#FFFFF">Paga</button>
-        <button mat-stroked-button color="#FFFFF">Scarica</button>
-    </div>
+  <div class="title">
+    <h2>Bolletta</h2>
+  </div>
+  <div class="bolletta">
+    <table>
+      <tr>
+        <th>Mese</th>
+        <th>Consumo</th>
+        <th>Costo</th>
+        <th>Azione</th>
+      </tr>
+      <tr>
+        <td>Aprile</td>
+        <td>165KwH</td>
+        <td>60,75 €</td>
+        <td>
+          <button mat-button> <mat-icon> download</mat-icon> </button>
+          <button mat-button ><mat-icon>credit_card</mat-icon></button>
+        </td>
+      </tr>
+      <tr>
+        <td>Marzo</td>
+        <td>167KwH</td>
+        <td>61,55 €</td>
+        <td>
+          <button mat-button> <mat-icon>download</mat-icon> </button>
+        </td>
+      </tr>
+      <tr>
+        <td>Febbraio</td>
+        <td>170KwH</td>
+        <td>62,80 €</td>
+        <td>
+          <button mat-button> <mat-icon>download</mat-icon> </button>
+        </td>
+      </tr>
+      <tr>
+        <td>Gennaio</td>
+        <td>176KwH</td>
+        <td>65,00 €</td>
+        <td>
+          <button mat-button> <mat-icon>download</mat-icon> </button>
+        </td>
+      </tr>
+      <tr>
+        <td>Dicembre</td>
+        <td>180KwH</td>
+        <td>66,60 €</td>
+        <td>
+          <button mat-button> <mat-icon>download</mat-icon> </button>
+        </td>
+      </tr>
+      <tr>
+        <td>Novembre</td>
+        <td>179KwH</td>
+        <td>66,50 €</td>
+        <td>
+          <button mat-button> <mat-icon>download</mat-icon> </button>
+        </td>
+      </tr>
+    </table>
+  </div>
+  <!-- <div class="button">
+    <button mat-stroked-button color="#FFFFF">Paga</button>
+    <button mat-stroked-button color="#FFFFF">Scarica</button>
+  </div> -->
 </div>
