--- a/src/app/components/contratto/contratto.component.html
+++ b/src/app/components/contratto/contratto.component.html
@@ -1,4 +1,4 @@
-<div class="anchor" id="contratto"> <p> </p></div>
+<div id="contratto" style="height: 100px;"></div>
 <h2>Contratto</h2>
 <iframe id="Contratto"
 title="Contratto"
