--- a/src/app/components/panoramica-focus/panoramica-focus.component.css
+++ b/src/app/components/panoramica-focus/panoramica-focus.component.css
@@ -102,7 +102,6 @@
     border-radius: 5px;
 }
 .title{
-    font-size: 80px;
-    margin-top: 1.2em;
-    margin-bottom: 1em;
+  font-size: 50px;
+  padding-bottom: 20px;
 }
