--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -45,7 +45,7 @@
             <div class="paragraph" style="font-size: small; ">
                 PCTO IIS Leonardo Da Vinci
                 <br>
-               Claudia Pontiggia, Rossella Bochicchio, Eleonora Rossetti, Filippo Rogai, Pierre Rebong, Vince Macasaet, Jinxe Xu
+               Rossella Bochicchio, Vince T.M. Macaset, Claudia Pontiggia, Pierre D. Rebong, Filippo Rogai, Eleonora Rossetti, Jinze Xu
                <br>
                Developed whit<mat-icon style="font-size: 12pt; padding-top: 10px;">favorite</mat-icon>on Angular
             </div>
