--- a/src/app/components/panoramica-personale/panoramica-personale.component.html
+++ b/src/app/components/panoramica-personale/panoramica-personale.component.html
@@ -1,31 +1,49 @@
 <div class="row">
-    <div class="col-8">
-        <mat-card>
+  <div class="col-8">
+    <mat-card>
 
-            <h1 class="card-title">
-            Monitoraggio settimanale
-            </h1>
-            <div class="row">
+      <h1 class="card-title">
+        Monitoraggio settimanale
+      </h1>
 
-                <div class="card col-11;element.text-align:center">
-                    <p-chart style="border: 0px !important;" height="220px" type="line" [data]="data"
-                        [options]="options"></p-chart>
-                </div>
-            </div>
-        </mat-card>
+      <div class="row">
+        <ng-container *ngIf="isProsumer">
 
-    </div>
+          <div class="card col-11;element.text-align:center">
+            <p-chart style="border: 0px !important;" height="220px" type="line" [data]="data"
+              [options]="options"></p-chart>
+          </div>
+        </ng-container>
+        <ng-container *ngIf="!isProsumer">
 
-    <div class=" col-4">
-        <mat-card>
-            <h1 class="card-title">
-            Meteo
-            </h1>
-            <div style="text-align: center;">
-                <img [src]="urlIconaMeteo" alt="">
-                <h2>{{efficienzaSolare}}</h2>
-            </div>
-        </mat-card>
+          <div class="card col-11;element.text-align:center">
+            <p-chart style="border: 0px !important;" height="220px" type="line" [data]="dataConsumer"
+              [options]="options"></p-chart>
+          </div>
+        </ng-container>
+      </div>
+    </mat-card>
 
-    </div>
+  </div>
+
+  <div class=" col-4">
+    <mat-card>
+      <h1 class="card-title">
+        Meteo
+      </h1>
+      <ng-container *ngIf="isProsumer">
+        <div style="text-align: center;">
+          <img [src]="urlIconaMeteo" alt="">
+          <h2>{{efficienzaSolare}}</h2>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="!isProsumer">
+        <div style="text-align: center;">
+          <img [src]="urlIconaMeteo" alt="">
+          <h2>{{efficienzaSolareConsumer}}</h2>
+        </div>
+      </ng-container>
+    </mat-card>
+
+  </div>
 </div>
