--- a/src/app/components/panorimica-comunita/panorimica-comunita.component.html
+++ b/src/app/components/panorimica-comunita/panorimica-comunita.component.html
@@ -12,7 +12,9 @@
             </div>
         </div>
         <div class="column col-8">
-            <div class="card">
+
+          <div class="card">
+              <h1 class="card-title">Consumi di energia nella Comunità</h1>
                 <p-chart type="bar" [data]="data" [options]="options"></p-chart>
             </div>
         </div>
